k8s/base/inference.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference
  labels:
    app: inference
    layer: "1"
    version: "0.1.0"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: inference
  template:
    metadata:
      labels:
        app: inference
        layer: "1"
        version: "0.1.0"
    spec:
      containers:
        - name: inference
          image: us-south1-docker.pkg.dev/ai-inference-497423/inference-repo/inference:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: inference
  labels:
    app: inference
    layer: "1"
spec:
  type: ClusterIP
  selector:
    app: inference
  ports:
    - port: 8080
      targetPort: 8080
